--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
       <div class="row">
         <div class="col-lg-12" data-aos="fade-up">
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <a href="http://www.boun.edu.tr/en_US" target="_blank"><img src="assets/img/education/cal-state-la_transparent.png" class="img-fluid" style="float:left;margin:0 10px 0 0;" width="90"></a>
-            <h4 style="text-align:left;"><a href="http://www.boun.edu.tr/en_US" target="_blank" style="color:#12d640">California State University, Los Angeles</a><br> </h4>
+            <a href="https://www.calstatela.edu/" target="_blank"><img src="assets/img/education/cal-state-la_transparent.png" class="img-fluid" style="float:left;margin:0 10px 0 0;" width="90"></a>
+            <h4 style="text-align:left;"><a href="https://www.calstatela.edu/" target="_blank" style="color:#12d640">California State University, Los Angeles</a><br> </h4>
             <h5 style="text-align:left;"><em>Bachelor of Science in Computer Information Systems; <strong>(In Progress)</strong></em></h5>
             <span class="left" style="float:left;color:#fff;"><em>September 2023 - June 2026</em></span>
             <span class="right" style="float:right;color:#fff;"><em>Los Angeles, CA</em></span><br><br>
@@ -548,7 +548,7 @@
             <i class="bx bx-share-alt"></i>
             <h3 style="color:#12d640;">Social Profiles</h3>
             <div class="social-links">
-              <a href="mailto:bryan.chica@outlook.com" target="_blank" class="gmail"><i class="bx bxl-google"></i></a>
+              <a href="mailto:bryan.chica@outlook.com" target="_blank" class="gmail"><i class="bx bx-envelope"></i></a>
               <a href="https://www.linkedin.com/in/bryan-chica" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
               <a href="https://github.com/chica-94" target="_blank" class="github"><i class="bx bxl-github"></i></a>
               <!-- <a href="https://www.youtube.com/@arasgungore" target="_blank" class="youtube"><i class="bx bxl-youtube"></i></a> -->
